# x-pass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  download_flags.ps1  index.html  package-lock.json  package.json  repomix-output.xml  vite.config.ts
docs/: index.html
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity_logger.rs  backup.rs  fake_data_generator.rs  flags.rs  lib.rs  main.rs  otp.rs  password_manager.rs  pseudo_mode.rs  titlebar_events.rs
src/assets/locales/ar/: translation.json
src/assets/locales/de/: translation.json
src/assets/locales/en/: translation.json
src/assets/locales/es/: translation.json
src/assets/locales/fr/: translation.json
src/assets/locales/hi/: translation.json
src/assets/locales/id/: translation.json
src/assets/locales/it/: translation.json
src/assets/locales/ja/: translation.json
src/assets/locales/ko/: translation.json
src/assets/locales/pt/: translation.json
src/assets/locales/ru/: translation.json
src/assets/locales/zh/: translation.json
src/components/: Sidebar.tsx  SmoothScrollbar.tsx  SnackbarProvider.tsx  UnlockAnimation.tsx  WelcomeScreen.tsx
src/context/: AuthContext.tsx  PseudoModeContext.tsx
src/context/theme/: ThemeContext.tsx  index.ts
src/context/theme/themes/: cyberpunk.ts  dark.ts  dracula.ts  fallout.ts  light.ts  neon.ts  ocean.ts  sand.ts  sunset.ts  toxic.ts
src/pages/: Login.tsx  Vault.tsx
src/pages/SettingsPage/: index.tsx  types.ts
src/pages/SettingsPage/components/: ActivityLogSection.tsx  FlagIcon.tsx  FlagIconCached.tsx  LanguageThemeSection.tsx  ProfileSection.tsx  SecuritySection.tsx
src/pages/SettingsPage/dialogs/: ActivityDialogs.tsx  DeleteAccountDialog.tsx  DeletePhotoDialog.tsx  PseudoModeDialog.tsx  QRDialog.tsx
src/pages/SettingsPage/dialogs/PhotosDialog/: EnhancedPhotoViewer.tsx  PhotosDialog.tsx
src/pages/SettingsPage/hooks/: useActivityLogs.ts  useFlags.ts  usePhotos.ts  usePseudoMode.ts  useSettings.ts
src/pages/SettingsPage/utils/: reportGenerator.ts
src/window/: CustomTitleBar.tsx
